Created separate module for scaling harmonic multiplier; refactoring

--- a/Addatone_MachX03/addatone.sty
+++ b/Addatone_MachX03/addatone.sty
@@ -67,7 +67,7 @@
     <Property name="PROP_LST_MaxFanout" value="1000" time="0"/>
     <Property name="PROP_LST_MuxStyle" value="Auto" time="0"/>
     <Property name="PROP_LST_NumCriticalPaths" value="3" time="0"/>
-    <Property name="PROP_LST_OptimizeGoal" value="Balanced" time="0"/>
+    <Property name="PROP_LST_OptimizeGoal" value="Timing" time="0"/>
     <Property name="PROP_LST_PropagatConst" value="True" time="0"/>
     <Property name="PROP_LST_RAMStyle" value="Auto" time="0"/>
     <Property name="PROP_LST_ROMStyle" value="Auto" time="0"/>
