--- a/Addatone_ICE40/Addatone_ICE401.sty
+++ b/Addatone_ICE40/Addatone_ICE401.sty
@@ -65,7 +65,7 @@
     <Property name="PROP_LST_EdfInRemLoc" value="Off" time="0"/>
     <Property name="PROP_LST_EdfMemPath" value="" time="0"/>
     <Property name="PROP_LST_FIXGATEDCLKS" value="True" time="0"/>
-    <Property name="PROP_LST_FSMEncodeStyle" value="Auto" time="0"/>
+    <Property name="PROP_LST_FSMEncodeStyle" value="Binary" time="0"/>
     <Property name="PROP_LST_ForceGSRInfer" value="Auto" time="0"/>
     <Property name="PROP_LST_IOInsertion" value="True" time="0"/>
     <Property name="PROP_LST_InterFileDump" value="False" time="0"/>
